--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore RSpec coverage reports
+/coverage/
+
+# Ignore RSpec failure tracking
+/spec/examples.txt
